# huskarl

./: CHANGELOG.md  Cargo.toml  README.md  mise.toml
examples/: authorization_code.rs  basic_dpop.rs  client_credentials.rs
integration/: docker-compose.yml  mise.toml
integration/keycloak/certs/: ca.key  ca.pem  client-identity.pem  client.key  client.pem  server.key  server.pem
integration/keycloak/import/: huskarl-test-realm.json
src/: endpoint_url.rs  error.rs  lib.rs  platform.rs  prelude.rs  revocation.rs  server_metadata.rs  uuid.rs
src/client_auth/: client_secret.rs  form_value.rs  jwt_bearer.rs  mod.rs  no_auth.rs
src/crypto/: mod.rs
src/crypto/signer/: error.rs  mod.rs  trait.rs
src/crypto/signer/native/: es256.rs  es384.rs  es512.rs  hmac.rs  mod.rs  rsa.rs
src/crypto/signer/webcrypto/: mod.rs
src/crypto/signer/webcrypto/helpers/: generate_key.rs  mod.rs  public_key.rs  serialize.rs  sign.rs
src/dpop/: implementation.rs  mod.rs  no_dpop.rs
src/grant/: client_credentials.rs  mod.rs  refresh.rs
src/grant/authorization_code/: error.rs  exchange.rs  flow.rs  grant.rs  jar.rs  loopback.rs  mod.rs  par.rs  pkce.rs  types.rs
src/grant/core/: form.rs  grant.rs  mod.rs  token_response.rs
src/grant/device_authorization/: grant.rs  mod.rs
src/http/: get.rs  mod.rs  reqwest_0_13.rs
src/jwk/: mod.rs  serde_utils.rs
src/jwt/: builder.rs  mod.rs  structure.rs
src/secrets/: mod.rs  providers.rs
src/secrets/encodings/: base64.rs  binary.rs  hex.rs  mod.rs  string.rs
src/token/: access_token.rs  id_token.rs  mod.rs  refresh_token.rs
