[package]
name = "huskarl"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[features]
default = ["default-crypto-native", "crypto-webcrypto"]
crypto-native = ["dep:p256", "dep:p384", "dep:p521", "dep:rsa", "dep:hmac"]
default-crypto-native = [
  "dep:p256_default",
  "dep:p384_default",
  "dep:p521_default",
  "dep:rsa_default",
  "dep:hmac_default",
]
crypto-webcrypto = [
  "dep:serde_bytes",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]
http-client-reqwest-0_13 = ["dep:reqwest"]
authorization-flow-loopback = ["tokio/net", "tokio/io-util"]

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["std"] }
bon = { version = "3.9", default-features = false, features = [
  "experimental-generics-setters",
  "experimental-overwritable",
  "implied-bounds",
] }
bytes = { version = "1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }
http = { version = "1", default-features = false, features = ["std"] }
rand = { version = "0.10.0-rc.9", default-features = false, features = [
  "std",
  "sys_rng",
  "thread_rng",
] }
reqwest = { version = "0.13", default-features = false, optional = true }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_bytes = { version = "0.11", optional = true }
serde_html_form = { version = "0.4", default-features = false, features = ["ser", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
sha2 = { version = "0.11.0-rc.5", default-features = false }
snafu = { version = "0.8", default-features = false, features = ["rust_1_81", "std"] }
subtle = { version = "2", default-features = false }
url = { version = "2", default-features = false }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "Crypto",
  "CryptoKey",
  "CryptoKeyPair",
  "JsonWebKey",
  "SubtleCrypto",
  "Window",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
] }

# Native crypto dependencies
p256 = { version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
] }
p384 = { version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
] }
p521 = { version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
  "getrandom",
] }
rsa = { version = "0.10.0-rc.15", optional = true, default-features = false, features = [
  "encoding",
  "sha2",
  "std",
] }
hmac = { version = "0.13.0-rc.5", optional = true, default-features = true }

### Dependencies available on all platforms except WASM

[target.'cfg(not(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none"))))'.dependencies]
tokio = { version = "1", default-features = false, features = ["time"] }
p256_default = { package = "p256", version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
] }
p384_default = { package = "p384", version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
] }
p521_default = { package = "p521", version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
  "getrandom",
] }
rsa_default = { package = "rsa", version = "0.10.0-rc.15", optional = true, default-features = false, features = [
  "encoding",
  "sha2",
  "std",
] }
hmac_default = { package = "hmac", version = "0.13.0-rc.5", optional = true, default-features = true }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
web-time = { version = "1", default-features = false }

[dev-dependencies]
huskarl = { path = ".", features = ["http-client-reqwest-0_13", "authorization-flow-loopback"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", features = ["cookies", "form", "json"] }
