[package]
name = "huskarl"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = '''
A modern OAuth2 client library.

Grant implementations support recent flows with fallback.
Async secret/crypto supports secret managers and cloud HSMs.
'''
repository = "https://github.com/huskarl-rs/huskarl"
license = "MIT OR Apache-2.0"
keywords = ["oauth2", "security", "authentication"]
categories = ["authentication"]
readme = "README.md"
include = [
  "Cargo.toml",
  "examples/**/*.rs",
  "src/**/*.rs",
  "tests/**/*.rs",
  "*.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[features]
default = ["default-crypto-native", "default-crypto-webcrypto"]

# When enabled, native crypto-based signing will be available on non-WASM
# targets. The libraries mostly (but are not guaranteed to) come from the
# rustcrypto project.
default-crypto-native = ["dep:p256", "dep:p384", "dep:p521", "dep:rsa", "dep:hmac"]

# When enabled, WebCrypto-based signing will be available on WASM targets,
# not including WASI. Runtime use is dependent on availability of the
# WebCrypto/subtble cryptography APIs.
#
# See https://developer.mozilla.org/en-US/docs/Web/API/SubtleCrypto
default-crypto-webcrypto = [
  "dep:serde_bytes",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]

# When enabled, adds support for `reqwest::Client`.
http-client-reqwest-0_13 = ["dep:reqwest"]

# When enabled, adds support for a loopback HTTP server that can handle
# the callback for the authorization code flow.
authorization-flow-loopback = ["tokio/net", "tokio/io-util"]

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["std"] }
bon = { version = "3.9", default-features = false, features = [
  "experimental-generics-setters",
  "experimental-overwritable",
  "implied-bounds",
] }
bytes = { version = "1", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }
http = { version = "1", default-features = false, features = ["std"] }
rand = { version = "0.10.0-rc.9", default-features = false, features = [
  "std",
  "sys_rng",
  "thread_rng",
] }
reqwest = { version = "0.13", default-features = false, optional = true }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_html_form = { version = "0.4", default-features = false, features = ["ser", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.11.0-rc.5", default-features = false }
snafu = { version = "0.8", default-features = false, features = ["rust_1_81", "std"] }
subtle = { version = "2", default-features = false }
url = { version = "2", default-features = false }

# WebCrypto dependencies
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde_bytes = { version = "0.11", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "Crypto",
  "CryptoKey",
  "CryptoKeyPair",
  "JsonWebKey",
  "SubtleCrypto",
  "Window",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
] }

# Native crypto dependencies
p256 = { version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
] }
p384 = { version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
] }
p521 = { version = "0.14.0-rc.7", optional = true, default-features = false, features = [
  "ecdsa",
  "pem",
  "std",
  "getrandom",
] }
rsa = { version = "0.10.0-rc.15", optional = true, default-features = false, features = [
  "encoding",
  "sha2",
  "std",
] }
hmac = { version = "0.13.0-rc.5", optional = true, default-features = true }

### Dependencies available on all platforms except WASM (not WASI)
[target.'cfg(not(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none"))))'.dependencies]
tokio = { version = "1", default-features = false, features = ["time"] }

### Dependencies available on WASM (not WASI)
[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.4", default-features = false, features = ["wasm_js"] }
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
web-time = { version = "1", default-features = false }

[dev-dependencies]

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dev-dependencies]
huskarl = { path = "." }
wasm-bindgen-test = "0.3"

[target.'cfg(not(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none"))))'.dev-dependencies]
huskarl = { path = ".", features = ["http-client-reqwest-0_13", "authorization-flow-loopback"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", features = ["cookies", "form", "json", "query"] }
httpmock = "0.8.3"
